--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -309,7 +309,8 @@ header {
     border-radius: 50px;
     padding: 12px 64px 13px 58px;
     color: #fff;
-    margin-top: 20px
+    margin-top: 20px;
+    cursor: pointer;
 }
 footer {
     background: #000;
