--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -457,6 +457,9 @@ footer ul {
 }
 @media only screen and (min-width: 768px) {
     /* Home Page */
+    #slides {
+        height: 700px;
+    }
     .mobile-nav-wrap {
         display: none;
     }
